parser.output
Terminals unused in grammar

    PROGRAM


State 25 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: system_goal $end

    1 system_goal: program _SCANEOF _SEMICOLON

    2 program: _BEGIN statement_list _END

    3 statement_list: statement statement_list
    4               | %empty

    5 statement: assign_stat
    6          | read_stat
    7          | write_stat

    8 assign_stat: id _ASSIGNOP expression _SEMICOLON

    9 read_stat: _READ _LPAREN id_list _RPAREN _SEMICOLON

   10 write_stat: _WRITE _LPAREN id_list _RPAREN _SEMICOLON
   11           | _WRITE _LPAREN expr_list _RPAREN _SEMICOLON

   12 id: _ID

   13 int_literal: _INTLITERAL

   14 id_list: id id_tail

   15 id_tail: _COMMA id id_tail
   16        | %empty

   17 expr_list: expression expr_list_tail

   18 expr_list_tail: _COMMA expression expr_list_tail
   19               | %empty

   20 expression: primary expression_tail

   21 expression_tail: add_op expression
   22                | %empty

   23 primary: id
   24        | int_literal
   25        | _LPAREN expression _RPAREN

   26 add_op: _PLUSOP
   27       | _MINUSOP


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258)
    _BEGIN (259) 2
    _END (260) 2
    _READ (261) 9
    _WRITE (262) 10 11
    _LPAREN (263) 9 10 11 25
    _RPAREN (264) 9 10 11 25
    _SEMICOLON (265) 1 8 9 10 11
    _COMMA (266) 15 18
    _ASSIGNOP (267) 8
    _PLUSOP (268) 26
    _MINUSOP (269) 27
    _ID <nodePtr> (270) 12
    _INTLITERAL <nodePtr> (271) 13
    _SCANEOF (272) 1


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    system_goal (19)
        on left: 1
        on right: 0
    program (20)
        on left: 2
        on right: 1
    statement_list (21)
        on left: 3 4
        on right: 2 3
    statement (22)
        on left: 5 6 7
        on right: 3
    assign_stat (23)
        on left: 8
        on right: 5
    read_stat (24)
        on left: 9
        on right: 6
    write_stat (25)
        on left: 10 11
        on right: 7
    id <nodePtr> (26)
        on left: 12
        on right: 8 14 15 23
    int_literal <nodePtr> (27)
        on left: 13
        on right: 24
    id_list <nodeVec> (28)
        on left: 14
        on right: 9 10
    id_tail <nodeVec> (29)
        on left: 15 16
        on right: 14 15
    expr_list <nodeVec> (30)
        on left: 17
        on right: 11
    expr_list_tail <nodeVec> (31)
        on left: 18 19
        on right: 17 18
    expression <nodePtr> (32)
        on left: 20
        on right: 8 17 18 21 25
    expression_tail <nodePtr> (33)
        on left: 21 22
        on right: 20
    primary <nodePtr> (34)
        on left: 23 24 25
        on right: 20
    add_op <stringVal> (35)
        on left: 26 27
        on right: 21


State 0

    0 $accept: . system_goal $end

    _BEGIN  shift, and go to state 1

    system_goal  go to state 2
    program      go to state 3


State 1

    2 program: _BEGIN . statement_list _END

    _READ   shift, and go to state 4
    _WRITE  shift, and go to state 5
    _ID     shift, and go to state 6

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 7
    statement       go to state 8
    assign_stat     go to state 9
    read_stat       go to state 10
    write_stat      go to state 11
    id              go to state 12


State 2

    0 $accept: system_goal . $end

    $end  shift, and go to state 13


State 3

    1 system_goal: program . _SCANEOF _SEMICOLON

    _SCANEOF  shift, and go to state 14


State 4

    9 read_stat: _READ . _LPAREN id_list _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 15


State 5

   10 write_stat: _WRITE . _LPAREN id_list _RPAREN _SEMICOLON
   11           | _WRITE . _LPAREN expr_list _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 16


State 6

   12 id: _ID .

    $default  reduce using rule 12 (id)


State 7

    2 program: _BEGIN statement_list . _END

    _END  shift, and go to state 17


State 8

    3 statement_list: statement . statement_list

    _READ   shift, and go to state 4
    _WRITE  shift, and go to state 5
    _ID     shift, and go to state 6

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 18
    statement       go to state 8
    assign_stat     go to state 9
    read_stat       go to state 10
    write_stat      go to state 11
    id              go to state 12


State 9

    5 statement: assign_stat .

    $default  reduce using rule 5 (statement)


State 10

    6 statement: read_stat .

    $default  reduce using rule 6 (statement)


State 11

    7 statement: write_stat .

    $default  reduce using rule 7 (statement)


State 12

    8 assign_stat: id . _ASSIGNOP expression _SEMICOLON

    _ASSIGNOP  shift, and go to state 19


State 13

    0 $accept: system_goal $end .

    $default  accept


State 14

    1 system_goal: program _SCANEOF . _SEMICOLON

    _SEMICOLON  shift, and go to state 20


State 15

    9 read_stat: _READ _LPAREN . id_list _RPAREN _SEMICOLON

    _ID  shift, and go to state 6

    id       go to state 21
    id_list  go to state 22


State 16

   10 write_stat: _WRITE _LPAREN . id_list _RPAREN _SEMICOLON
   11           | _WRITE _LPAREN . expr_list _RPAREN _SEMICOLON

    _LPAREN      shift, and go to state 23
    _ID          shift, and go to state 6
    _INTLITERAL  shift, and go to state 24

    id           go to state 25
    int_literal  go to state 26
    id_list      go to state 27
    expr_list    go to state 28
    expression   go to state 29
    primary      go to state 30


State 17

    2 program: _BEGIN statement_list _END .

    $default  reduce using rule 2 (program)


State 18

    3 statement_list: statement statement_list .

    $default  reduce using rule 3 (statement_list)


State 19

    8 assign_stat: id _ASSIGNOP . expression _SEMICOLON

    _LPAREN      shift, and go to state 23
    _ID          shift, and go to state 6
    _INTLITERAL  shift, and go to state 24

    id           go to state 31
    int_literal  go to state 26
    expression   go to state 32
    primary      go to state 30


State 20

    1 system_goal: program _SCANEOF _SEMICOLON .

    $default  reduce using rule 1 (system_goal)


State 21

   14 id_list: id . id_tail

    _COMMA  shift, and go to state 33

    $default  reduce using rule 16 (id_tail)

    id_tail  go to state 34


State 22

    9 read_stat: _READ _LPAREN id_list . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 35


State 23

   25 primary: _LPAREN . expression _RPAREN

    _LPAREN      shift, and go to state 23
    _ID          shift, and go to state 6
    _INTLITERAL  shift, and go to state 24

    id           go to state 31
    int_literal  go to state 26
    expression   go to state 36
    primary      go to state 30


State 24

   13 int_literal: _INTLITERAL .

    $default  reduce using rule 13 (int_literal)


State 25

   14 id_list: id . id_tail
   23 primary: id .

    _COMMA  shift, and go to state 33

    _RPAREN   reduce using rule 16 (id_tail)
    _RPAREN   [reduce using rule 23 (primary)]
    _COMMA    [reduce using rule 23 (primary)]
    $default  reduce using rule 23 (primary)

    id_tail  go to state 34


State 26

   24 primary: int_literal .

    $default  reduce using rule 24 (primary)


State 27

   10 write_stat: _WRITE _LPAREN id_list . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 37


State 28

   11 write_stat: _WRITE _LPAREN expr_list . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 38


State 29

   17 expr_list: expression . expr_list_tail

    _COMMA  shift, and go to state 39

    $default  reduce using rule 19 (expr_list_tail)

    expr_list_tail  go to state 40


State 30

   20 expression: primary . expression_tail

    _PLUSOP   shift, and go to state 41
    _MINUSOP  shift, and go to state 42

    $default  reduce using rule 22 (expression_tail)

    expression_tail  go to state 43
    add_op           go to state 44


State 31

   23 primary: id .

    $default  reduce using rule 23 (primary)


State 32

    8 assign_stat: id _ASSIGNOP expression . _SEMICOLON

    _SEMICOLON  shift, and go to state 45


State 33

   15 id_tail: _COMMA . id id_tail

    _ID  shift, and go to state 6

    id  go to state 46


State 34

   14 id_list: id id_tail .

    $default  reduce using rule 14 (id_list)


State 35

    9 read_stat: _READ _LPAREN id_list _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 47


State 36

   25 primary: _LPAREN expression . _RPAREN

    _RPAREN  shift, and go to state 48


State 37

   10 write_stat: _WRITE _LPAREN id_list _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 49


State 38

   11 write_stat: _WRITE _LPAREN expr_list _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 50


State 39

   18 expr_list_tail: _COMMA . expression expr_list_tail

    _LPAREN      shift, and go to state 23
    _ID          shift, and go to state 6
    _INTLITERAL  shift, and go to state 24

    id           go to state 31
    int_literal  go to state 26
    expression   go to state 51
    primary      go to state 30


State 40

   17 expr_list: expression expr_list_tail .

    $default  reduce using rule 17 (expr_list)


State 41

   26 add_op: _PLUSOP .

    $default  reduce using rule 26 (add_op)


State 42

   27 add_op: _MINUSOP .

    $default  reduce using rule 27 (add_op)


State 43

   20 expression: primary expression_tail .

    $default  reduce using rule 20 (expression)


State 44

   21 expression_tail: add_op . expression

    _LPAREN      shift, and go to state 23
    _ID          shift, and go to state 6
    _INTLITERAL  shift, and go to state 24

    id           go to state 31
    int_literal  go to state 26
    expression   go to state 52
    primary      go to state 30


State 45

    8 assign_stat: id _ASSIGNOP expression _SEMICOLON .

    $default  reduce using rule 8 (assign_stat)


State 46

   15 id_tail: _COMMA id . id_tail

    _COMMA  shift, and go to state 33

    $default  reduce using rule 16 (id_tail)

    id_tail  go to state 53


State 47

    9 read_stat: _READ _LPAREN id_list _RPAREN _SEMICOLON .

    $default  reduce using rule 9 (read_stat)


State 48

   25 primary: _LPAREN expression _RPAREN .

    $default  reduce using rule 25 (primary)


State 49

   10 write_stat: _WRITE _LPAREN id_list _RPAREN _SEMICOLON .

    $default  reduce using rule 10 (write_stat)


State 50

   11 write_stat: _WRITE _LPAREN expr_list _RPAREN _SEMICOLON .

    $default  reduce using rule 11 (write_stat)


State 51

   18 expr_list_tail: _COMMA expression . expr_list_tail

    _COMMA  shift, and go to state 39

    $default  reduce using rule 19 (expr_list_tail)

    expr_list_tail  go to state 54


State 52

   21 expression_tail: add_op expression .

    $default  reduce using rule 21 (expression_tail)


State 53

   15 id_tail: _COMMA id id_tail .

    $default  reduce using rule 15 (id_tail)


State 54

   18 expr_list_tail: _COMMA expression expr_list_tail .

    $default  reduce using rule 18 (expr_list_tail)
